# isem-arbitrage-analysis

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
config/: settings.yaml
data/: README.md
data/sample/: isem_synthetic_sample.csv
docs/: code_fidelity.md  data_dictionary.md  fidelity_notes.md  market_structure.md  methodology.md  model_card.md  results.md
outputs/: README.md  original_market_price_summary.csv  original_model_performance.csv  original_trading_performance.csv
reports/: executive_case_study.md
scripts/: 00_make_synthetic_sample.py  01_run_reproduction_pipeline.py  original_notebook_export.py
src/energy_arbitrage/: __init__.py  backtesting.py  config.py  data.py  features.py  modeling.py  original_logic.py  pipeline.py  visualization.py
tests/: test_fidelity.py
