[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-market-arbitrage-analytics"
version = "0.1.0"
description = "Faithful reproduction of an I-SEM electricity market arbitrage analytics case study."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Snehankur Sarkar"}]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "lightgbm>=4.0",
  "matplotlib>=3.7",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
